...
    return true;
  }

  return (
    <>
      <View
        testID="loginScreen"
        style={{
          display: 'flex',
          justifyContent: 'flex-end',
          flexDirection: 'column',
          alignItems: 'center',
          height: '70%',
...
        {/* title */}
        <Text style={{fontWeight: 'bold', fontSize: 40}}>Welcome Back!</Text>

        {/* inputs */}
        <View style={{width: Theme.CONTAINER_WIDTH_LARGE}}>
          <TextInput
            testID="loginEmail"
            style={CommonStyle.inputBoxStyle}
            onChangeText={setEmail}
            value={email}
            placeholder={'USC EMAIL'}
          />
          <TextInput
            testID="loginPassword"
            secureTextEntry={true}
            onChangeText={setPassword}
            style={CommonStyle.inputBoxStyle}
            placeholder={'PASSWORD'}
            value={password}
          />
...
          style={{
            width: Theme.CONTAINER_WIDTH_MEDIUM,
            height: '20%',
            justifyContent: 'space-evenly',
          }}>
          <Button
            testID="loginButton"
            title={'Sign In'}
            color={Theme.RED_PRIMARY}
            onPress={signin}
          />

          <Button
              testID="signUpButton"
            title={'Sign Up'}
            color={Theme.YELLOW_PRIMARY}
            onPress={() => {
              navigation.navigate('SignUp');
            }}
          />
...
