...
                flexDirection: 'row',
                width: '80%',
                justifyContent: 'space-around',
              }}>
              <View style={{width: '30%'}}>
                <Button
                  testID='No'
                  title={'No'}
                  color={Theme.RED_PRIMARY}
                  onPress={() => {
                    decline();
                  }}
                />
              </View>

              <View style={{width: '30%'}}>
                <Button
                  testID='Yes'
                  title={'Yes'}
                  color={Theme.RED_PRIMARY}
                  onPress={() => {
                    accept();
                  }}
                />
...
