...
                  style={CommonStyle.inputBoxStyle}
                  onChangeText={setLastName}
                  value={lastName}
                  placeholder={'LAST NAME'}
              />
            <TextInput
              testID="signUpUSCIDTextInput"
              style={CommonStyle.inputBoxStyle}
              onChangeText={setUscID}
              value={uscID}
              placeholder={'USC ID'}
            />
            <DropDownMenu items={schools} placeholder={"Please Select a School"} setValue={setMajor} />
            <TextInput
              testID="signUpUSCEmailTextInput"
              style={CommonStyle.inputBoxStyle}
              onChangeText={setEmail}
              value={email}
              placeholder={'USC EMAIL'}
            />
            <TextInput
              testID="signUpPasswordTextInput"
              style={CommonStyle.inputBoxStyle}
              secureTextEntry={true}
              onChangeText={setPassword}
              value={password}
              placeholder={'PASSWORD'}
            />
...
                  <Text style={{marginLeft: 10}}>STUDENT</Text>
                </TouchableOpacity>
              </View>

              <View>
                <TouchableOpacity
                testID="signUpManagerRadioButton"
                  onPress={() => setIsAdmin(true)}
                  style={{
                    display: 'flex',
                    flexDirection: 'row',
                    alignItems: 'center',
                  }}>
...
              width: Theme.CONTAINER_WIDTH_MEDIUM,
              height: '10%',
              marginBottom: 20,
              justifyContent: 'space-evenly',
            }}>
            <Button
              testID="signUpDoneButton"
              title={'Done'}
              color={Theme.RED_PRIMARY}
              onPress={() => {
                submitForm(submissionSucceedCallback);
              }}
            />
...
